== 0.23.9

* Enhancements
  * Project show page will now default to displaying the first alphabetically unarchived board by default
  * New boards can now be created when stickies are created
  * HTML Markup no longer shows up in a stickies short description
  * HTML Links in sticky descriptions now automatically have target="_blank" added as an attribute

* Bug Fix
  * User activation emails are no longer sent out when a user's status is changed from pending to inactive
  * Sticky tooltips no longer show up over a new sticky popup

== 0.23.8

* Bug Fix
  * Users with now projects favorited should still be able to create stickies

== 0.23.7

* Enhancements
  * Frames have been renamed to Boards
    * Boards no longer include start and end dates
    * Boards can be archived
    * Project pages now only show stickies of active boards
  * Sticky completion emails on groups now highlight the sticky that was completed on the group

* Bug Fix
  * Pagination now works correctly on group pages where groups have more than 50 stickies

== 0.23.6

* Enhancements
  * Gem updates including Rails 3.2.9 and Ruby 1.9.3-p327
  * Updated to Contour 1.1.1 and replaced inline JavaScript with Unobtrusive JavaScript

== 0.23.5

* Enhancements
  * Project JSON API returns whether or not the project has been favorited
  * Project JSON API returns project specific tags

* Bug Fix
  * Sticky links no longer overlap the complete sticky checkmark box on the calendar view
  * When deleting boards, tags, and templates, the user is now redirected to the project specific boards, tags, or templates index
  * Boards now correctly retain the dropdown arrow when switching by selecting a new board from the dropdown
  * Editing template input fields and dropdowns no longer causes the input field to become unselected in IE

== 0.23.4

* Enhancements
  * Project JSON API returns color
  * User JSON API returns user authentication_token, first_name, last_name, email, and id on successful login