@@ -58,6 +58,11 @@ class User < ActiveRecord::Base
 
   # User Methods
 
+  def avatar_url(size = 80, default = 'mm')
+    gravatar_id = Digest::MD5.hexdigest(self.email.downcase)
+    "//gravatar.com/avatar/#{gravatar_id}.png?&s=#{size}&r=pg&d=#{default}"
+  end
+
   def associated_users
     User.current.human.with_project(self.all_projects.pluck(:id), [true, false])
   end
