@@ -56,6 +56,14 @@
 <% end %>
 
 <div class="page-header">
+  <h2>Gravatar Icon</h2>
+</div>
+
+<%= image_tag current_user.avatar_url, class: 'img-rounded' %>
+
+You can change your avatar at <%= link_to 'gravatar.com', 'http://gravatar.com', target: '_blank' %>
+
+<div class="page-header">
   <h2>Cross-Application API Tokens</h2>
 </div>
 
