@@ -20,5 +20,8 @@
 
     <dt>Service Account</dt>
     <dd><%= @user.service_account? %></dd>
+
+    <dt>User Avatar</dt>
+    <dd><%= image_tag @user.avatar_url, class: 'img-rounded' %></dd>
   </dl>
 <% end %>
