@@ -25,7 +25,7 @@ Contour.setup do |config|
               { authentications: true }]
     },
     {
-      name: 'current_user.name', eval: true, display: 'signed_in', path: 'user_path(current_user)', position: 'right',
+      name: 'image_tag(current_user.avatar_url(18, "blank"), class: "img-rounded")+" "+current_user.name', eval: true, display: 'signed_in', path: 'settings_path', position: 'right',
       links: [{ html: '"<div class=\"small\" style=\"color:#bbb\">"+current_user.email+"</div>"', eval: true },
               { name: 'Settings', path: 'settings_path' },
               { name: 'Authentications', path: 'authentications_path', condition: 'not PROVIDERS.blank?' },
